# financial-news-classification

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  classification.ipynb  docker-compose.yml  pyproject.toml  requirements.txt  sentiment_analysis.ipynb  shap.ipynb
experiments/: classification.ipynb  lstm.ipynb  test.ipynb
