[tool.poetry]
name = "financialnewssentiment"
version = "0.1.0"
description = ""
authors = ["zoohta <koh.0430.ta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.8.0"
jupyter = "^1.0.0"
seaborn = "^0.12.2"
wordcloud = "^1.9.2"
nltk = "^3.8.1"
torch = "^2.1.2"
streamlit = "^1.29.0"
streamlit-shap = "^1.0.2"
shap = "0.43.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
